tests/integration/snapshots/test_config_loading__config_loading_integration.snap
---
source: tests/integration/test_config_loading.rs
expression: config
---
NewtonConfig {
    project: ProjectConfig {
        name: "integration-test",
        template: Some(
            "advanced-project",
        ),
    },
    executor: ExecutorConfig {
        coding_agent: "advanced-agent",
        coding_agent_model: "advanced-model",
        auto_commit: true,
    },
    evaluator: EvaluatorConfig {
        test_command: Some(
            "./scripts/comprehensive-tests.sh",
        ),
        score_threshold: 88.5,
    },
    advisor: AdvisorConfig,
    context: ContextConfig {
        clear_after_use: false,
        file: ".custom/state/context.md",
    },
    promise: PromiseConfig {
        file: ".custom/state/promise.txt",
    },
}
