tests/integration/snapshots/test_config_loading__env_precedence_integration.snap
---
source: tests/integration/test_config_loading.rs
expression: config
---
NewtonConfig {
    project: ProjectConfig {
        name: "env-project",
        template: Some(
            "env-template",
        ),
    },
    executor: ExecutorConfig {
        coding_agent: "env-agent",
        coding_agent_model: "env-model",
        auto_commit: true,
    },
    evaluator: EvaluatorConfig {
        test_command: Some(
            "./env-tests.sh",
        ),
        score_threshold: 95.0,
    },
    advisor: AdvisorConfig,
    context: ContextConfig {
        clear_after_use: false,
        file: ".env/context.md",
    },
    promise: PromiseConfig {
        file: ".env/promise.txt",
    },
}
